--- a/pages/UserList/index.html
+++ b/pages/UserList/index.html
@@ -15,11 +15,24 @@
 </div>
 <div>
 <!--<button type="button" class="btn btn-danger navbar-btn listButton" onclick="deleteData('Oa_customer')"><i class="fas fa-trash-alt"></i> 删除</button>-->
-<button type="button" class="btn btn-info navbar-btn listButton" onclick="javascript:window.location.href='__URL__/importCustomer'"><i class="fa fa-sign-in" aria-hidden="true"></i> 导出</button>
+<button type="button" class="btn btn-info navbar-btn listButton" onclick="javascript:window.location.href='__URL__/importCustomer'"><i class="fa fa-sign-in" aria-hidden="true"></i>筛选</button>
 <button type="button" class="btn btn-success navbar-btn listButton" onclick="openAddData('addCustomer')"><i class="fa fa-plus" aria-hidden="true"></i> 新建</button>
+<button type="button" class="btn btn-primary navbar-btn listButton" onclick="javascript:if(confirm('由于数据存在关联查询，导出Exce可能需要1-3分钟的时间，确定要导出吗（确定后请勿刷新页面或关闭浏览器）?'))location='/manage.php/Order/exportExcel?startTime=&amp;endTime=&amp;business_id=&amp;one_category=&amp;two_category='"><i class="fa fa-sign-in" aria-hidden="true"></i> 导出Excel</button>
 <form class="navbar-form navbar-right listSearch" role="search" method="get" action="__ACTION__">
 <div class="form-group">
-<input name="keyWord" type="text" class="form-control" id="keyWord" placeholder="请输入关键词进行搜索">
+    <select class="form-control" name="moduleType">
+        <option value="" selected="">手机号</option>
+        <option value="=0">主模块</option>
+    </select>
+    <select class="form-control" name="moduleType">
+        <option value="" selected="">姓名</option>
+        <option value="=0">主模块</option>
+    </select>
+    <select class="form-control" name="moduleType">
+        <option value="" selected="">ID</option>
+        <option value="=0">主模块</option>
+    </select>
+    <!-- <input name="keyWord" type="text" class="form-control" id="keyWord" placeholder="请输入关键词进行搜索"> -->
 </div>
 <button type="submit" class="btn btn-primary"><i class="fa fa-search" aria-hidden="true"></i> 搜索</button>
 </form>    
@@ -74,7 +87,14 @@
 
 
 <ul class="pagination">
-<{$page}>
+    <li class="active"><a href="#">1</a></li>
+    <li><a href="/manage.php/Order/orderList/p/2.html">2</a></li>
+    <li><a href="/manage.php/Order/orderList/p/3.html">3</a></li>
+    <li><a href="/manage.php/Order/orderList/p/4.html">4</a></li>
+    <li><a href="/manage.php/Order/orderList/p/5.html">5</a></li>
+    <li><a href="/manage.php/Order/orderList/p/2.html">下一页</a></li>
+    <li><a>共44条记录</a></li>
+    <li><a>第1页/共5页</a></li>
 </ul>
 
 </body>
