--- a/pages/index.html
+++ b/pages/index.html
@@ -43,7 +43,7 @@
 <div class="com-leftBox">
 <div class="com-lbLeftShadow"></div>
 <ul class="com-leftMenu">
-
+    <li><a class="com-TopMenu" data-id="<{$vo.id}>" href="__APP__<{$vo.moduleTypeLink}>" target="right"><i class="fa fa-<{$vo.moduleTypeIcon}>"></i> <{$vo.moduleTypeName}></a></li>
 </ul>
 </div>
 <!--left begin-->
