--- a/login.html
+++ b/login.html
@@ -3,27 +3,49 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>新创动力 | 后台管理系统 V3.0</title>
-    
-    #include "common.html" 
-
-    <link rel="stylesheet" href="./css/login.css">
+    <title>汉得 | 后台管理系统 V3.0</title>
+    <link rel="stylesheet" href="/css/login.css">
+    <!-- <script src="/js/load.js"></script> -->
+    <script src="./js/common/jquery-1.8.2.min.js"></script>
 </head>
 
 <body>
     <div class="loginBox">
-        <div class="loginTitle"></div>
+        <div class="loginTitle" style="background:none;text-align: center;font-size: 40px;color: #fff;line-height: 45px;text-shadow: 0px 1px 2px #484848;">汉得·管理系统</div>
         <div class="userInput"><label>用　户</label><input type="text" name="username" id="username" datatype="*" nullmsg="请输入用户名！"
                 errormsg="用户名不能为空！" autocomplete="off"></div>
         <div class="userInput passInput"><label>密　码</label><input type="password" name="password" id="password"
                 datatype="*" nullmsg="密码不能为空！"></div>
-        <div class="userInput codeInput"><label>验证码</label><input type="text" name="VerCode" id="VerCode" datatype="*"
+        <!-- <div class="userInput codeInput"><label>验证码</label><input type="text" name="VerCode" id="VerCode" datatype="*"
                 nullmsg="验证码不能为空！" autocomplete="off">
             <div class="codeImg"><img src="__URL__/verCode" style="cursor:pointer" title="点击刷新验证码" /></div>
-        </div>
+        </div> -->
         <div class="buttonDiv"><input type="submit" class="login_button" value="登陆" /></div>
     </div>
 
 </body>
+<script>
+    $(function () {
+        $.ajax({
+            type: "POST",
+            url: "http://hande.icpnt.com/console/login",
+            data: {
+                loginname: "admin",
+                passwd: "123456"
+            },
+            dataType: "json",
+            success: function (res) {
+                console.log(res);
+            }
+        });
+    });
+    // $.get('http://hande.icpnt.com/console/login',{loginname:'admin', passwd:'123456'},function(res){
+    //     console.log(res);
+
+    // });
+    // $.get("http://hande.icpnt.com/console/login", { 'loginname' : 'admin' ,'passwd':'123456'},function(res){
+    //     console.log(res);
+    // });
+</script>
 
 </html>
