--- a/pages/AddCompany/index.html
+++ b/pages/AddCompany/index.html
@@ -6,6 +6,7 @@
     <title>新增公司管理</title>
     <script src="/js/load.js"></script>
     <link rel="stylesheet" href="/css/rightCommon.css">
+    <script src="./addCompanyt.js"></script>
 </head>
 
 <body>
@@ -28,17 +29,17 @@
                 <tbody>
                     <tr>
                         <td align="center">编号</td>
-                        <td><input type="text" name="business_name" id="business_name" class="form-control" datatype="*" nullmsg="请输入用户姓名" placeholder="请输入用户姓名"></td>
+                        <td><input type="text" name="business_name" id="business_name" class="form-control" datatype="*" nullmsg="--自动生成编号--" placeholder="--自动生成编号--" ></td>
                     </tr>
 
                     <tr>
                         <td align="center">账号</td>
-                        <td><input type="text" name="business_tel" id="business_tel" class="form-control" datatype="*"  nullmsg="请输入手机号" placeholder="请输入手机号"></td>
+                        <td><input type="text" name="business_tel" id="business_tel" class="form-control" datatype="*"  nullmsg="请输入帐号" placeholder="请输入帐号"></td>
                     </tr>
 
                     <tr>
                         <td align="center">密码</td>
-                        <td><input type="text" name="business_tel" id="business_tel" class="form-control" datatype="*"  nullmsg="请输入部门" placeholder="请输入部门"></td>
+                        <td><input type="text" name="business_tel" id="business_tel" class="form-control" datatype="*"  nullmsg="请输入密码" placeholder="请输入密码"></td>
                     </tr>
 
                     <tr>
@@ -52,7 +53,7 @@
                     </tr>
                     <tr>
                         <td align="center">联系人方式</td>
-                        <td><input type="text" name="business_tel" id="business_tel" class="form-control" datatype="*"  nullmsg="请输入联系人方式" placeholder="请输入联系人方式"></td>
+                        <td><input type="text" name="business_tel" id="business_tel" class="form-control" datatype="*"  nullmsg="请选择联系方式" placeholder="请选择联系方式"></td>
                     </tr>
 
                     <tr>
