--- a/pages/index.html
+++ b/pages/index.html
@@ -45,7 +45,8 @@
     <div class="com-leftBox">
         <div class="com-lbLeftShadow"></div>
         <ul class="com-leftMenu">
-            <li><a class="com-TopMenu" data-id="<{$vo.id}>" href="__APP__<{$vo.moduleTypeLink}>" target="right"><i class="fa fa-<{$vo.moduleTypeIcon}>"></i></a></li>
+            <li><a class="com-TopMenu" data-id="<{$vo.id}>" href="__APP__<{$vo.moduleTypeLink}>" target="right"><i
+                        class="fa fa-<{$vo.moduleTypeIcon}>"></i></a></li>
         </ul>
     </div>
     <!--left begin-->
@@ -57,8 +58,5 @@
     <!--right end-->
 
 </body>
-<script>
-
-</script>
 
 </html>
